--- a/theshop/config.yaml
+++ b/theshop/config.yaml
@@ -1,11 +1,49 @@
-name: "Hello world"
-description: "My first real add-on!"
-version: "1.0.0"
-slug: "hello_world"
-init: false
+name: cece0719 the shop
+version: 0.1.1
+slug: wallpad
+description: 테스트
 arch:
-  - aarch64
-  - amd64
   - armhf
   - armv7
+  - aarch64
+  - amd64
   - i386
+map:
+  - share:rw
+url: https://github.com/cece0719/ha-addons
+startup: application
+boot: auto
+uart: true
+options:
+  model: commax
+  type: serial
+  sendDelay: 150
+  serial:
+    port: "/dev/ttyUSB0"
+    baudrate: 9600
+    parity: none
+  socket:
+    deviceIP: 192.0.0.1
+    port: 8899
+  mqtt:
+    server: 192.168.x.x
+    username: id
+    password: pw
+    receiveDelay: 10000
+schema:
+  model: list(commax|samsung|daelim|hyundai)
+  type: list(serial|socket)
+  sendDelay: int
+  serial:
+    port: str?
+    baudrate: int?
+    parity: list(none|even|odd)?
+  socket:
+    deviceIP: str?
+    port: int?
+  mqtt:
+    server: str
+    username: str
+    password: str
+    receiveDelay: int
+  customfile: str?
