--- a/theshop/Dockerfile
+++ b/theshop/Dockerfile
@@ -2,11 +2,11 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-ENV LANG C.UTF-8
+#ENV LANG C.UTF-8
 
 # Copy data for add-on
 COPY run.sh /
-COPY js /js
+#COPY js /js
 #
 ## Install requirements for add-on
 #RUN apk add --no-cache jq npm make gcc g++ python3 linux-headers udev && \
