--- a/theshop/Dockerfile
+++ b/theshop/Dockerfile
@@ -6,7 +6,7 @@ FROM $BUILD_FROM
 
 # Copy data for add-on
 COPY run.sh /
-#COPY js /js
+COPY js /js
 #
 ## Install requirements for add-on
 #RUN apk add --no-cache jq npm make gcc g++ python3 linux-headers udev && \
