--- a/theshop/Dockerfile
+++ b/theshop/Dockerfile
@@ -14,7 +14,7 @@ RUN apk add --no-cache jq npm make gcc g++ python3 linux-headers udev && \
     npm install mqtt && \
     npm install serialport --build-from-source=serialport
 
-WORKDIR /share
+#WORKDIR /share
 
 RUN chmod a+x /run.sh
 
