--- a/theshop/Dockerfile
+++ b/theshop/Dockerfile
@@ -8,11 +8,11 @@ FROM $BUILD_FROM
 COPY run.sh /
 COPY js /js
 #
-## Install requirements for add-on
-RUN apk add --no-cache jq npm make gcc g++ python3 linux-headers udev && \
-    npm init -f && \
-    npm install mqtt && \
-    npm install serialport --build-from-source=serialport
+### Install requirements for add-on
+#RUN apk add --no-cache jq npm make gcc g++ python3 linux-headers udev && \
+#    npm init -f && \
+#    npm install mqtt && \
+#    npm install serialport --build-from-source=serialport
 
 #WORKDIR /share
 
