--- a/theshop/Dockerfile
+++ b/theshop/Dockerfile
@@ -1,7 +1,7 @@
 #ARG BUILD_FROM="alpine:latest"
 #ARG BUILD_FROM
 #FROM $BUILD_FROM
-FROM alpine:latest
+FROM node:latest
 
 ENV LANG C.UTF-8
 
@@ -10,8 +10,7 @@ COPY run.sh /
 COPY js /js
 #
 ## Install requirements for add-on
-RUN apk add --no-cache jq npm make gcc g++ python3 linux-headers udev && \
-    npm init -f && \
+RUN npm init -f && \
     npm install mqtt && \
     npm install serialport --build-from-source=serialport
 
