--- a/theshop/Dockerfile
+++ b/theshop/Dockerfile
@@ -6,7 +6,7 @@ ENV LANG C.UTF-8
 #RUN apk add --no-cache py3-pip
 
 RUN python3 -m pip install pyserial
-RUN python3 -m pip install paho-mqtt
+RUN python3 -m pip install 'paho-mqtt<2.0.0'
 
 COPY run.sh /
 COPY run.py /
