--- a/theshop/Dockerfile
+++ b/theshop/Dockerfile
@@ -9,7 +9,7 @@ RUN python3 -m pip install pyserial
 RUN python3 -m pip install 'paho-mqtt<2.0.0'
 
 COPY run.sh /
-COPY run.py /
+COPY py /py
 RUN chmod a+x /run.sh
 
 WORKDIR /share
