--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: cece0719 ha addons
 url: https://github.com/cece0719/ha-addon
-maintainer: HomeAssistant Team <cece0719@gmail.com>
+maintainer: cece0719 <cece0719@gmail.com>
