--- a/theshop/config.yaml
+++ b/theshop/config.yaml
@@ -1,5 +1,5 @@
 name: cece0719 the shop
-version: 1.0.109
+version: 1.0.110
 slug: wallpad
 description: 테스트
 arch:
@@ -47,5 +47,5 @@ schema:
     password: str
     receiveDelay: int
   customfile: str?
-port:
-  - 8001
+ports:
+  8001/tcp: 8001
