--- a/theshop/config.yaml
+++ b/theshop/config.yaml
@@ -1,5 +1,5 @@
 name: cece0719 the shop
-version: 1.0.158
+version: 1.0.159
 slug: wallpad
 description: 테스트
 arch:
@@ -18,7 +18,7 @@ boot: auto
 uart: true
 options:
   type: serial
-  logging: true
+  loggingDetail: true
   serial:
     port: "/dev/ttyUSB0"
   socket:
@@ -28,7 +28,7 @@ options:
     receiveDelay: 10000
 schema:
   type: list(serial|socket)
-  logging: bool
+  loggingDetail: bool
   serial:
     port: str?
   socket:
