--- a/theshop/config.yaml
+++ b/theshop/config.yaml
@@ -18,7 +18,7 @@ boot: auto
 uart: true
 options:
   type: serial
-  loggingDetail: true
+  logging: true
   serial:
     port: "/dev/ttyUSB0"
   socket:
@@ -28,7 +28,7 @@ options:
     receiveDelay: 10000
 schema:
   type: list(serial|socket)
-  loggingDetail: bool
+  logging: bool
   serial:
     port: str?
   socket:
