--- a/theshop/config.yaml
+++ b/theshop/config.yaml
@@ -1,5 +1,5 @@
 name: cece0719 the shop
-version: 1.0.161
+version: 1.0.162
 slug: wallpad
 description: 테스트
 arch:
@@ -17,23 +17,23 @@ startup: application
 boot: auto
 uart: true
 options:
-  type: serial
+#  type: serial
   logging: true
-  serial:
-    port: "/dev/ttyUSB0"
-  socket:
-    port: 8899
-  mqtt:
-    server: 192.168.x.x
-    receiveDelay: 10000
+#  serial:
+#    port: "/dev/ttyUSB0"
+#  socket:
+#    port: 8899
+#  mqtt:
+#    server: 192.168.x.x
+#    receiveDelay: 10000
 schema:
-  type: list(serial|socket)
+#  type: list(serial|socket)
   logging: bool
-  serial:
-    port: str?
-  socket:
-    port: int?
-  mqtt:
-    server: str
-    receiveDelay: int
+#  serial:
+#    port: str?
+#  socket:
+#    port: int?
+#  mqtt:
+#    server: str
+#    receiveDelay: int
   customfile: str?
