--- a/theshop/config.yaml
+++ b/theshop/config.yaml
@@ -1,5 +1,5 @@
 name: cece0719 the shop
-version: 1.2.35
+version: 1.2.36
 slug: wallpad
 description: 테스트
 arch:
@@ -19,6 +19,7 @@ uart: true
 options:
 #  type: serial
   logLevel: INFO
+  excludeList: nothing
 #  serial:
 #    port: "/dev/ttyUSB0"
 #  socket:
@@ -29,6 +30,7 @@ options:
 schema:
 #  type: list(serial|socket)
   logLevel: list(DEBUG|INFO)
+  excludeList: str
 #  serial:
 #    port: str?
 #  socket:
